test/errors/not_allowed_here.aw
foreign import: C {
	module test {

	}
}
